# flutter_cache_video_player

./: CHANGELOG.md  README.md  README_ZH.md  analysis_options.yaml  plan.md  pubspec.yaml  signals.md
.github/workflows/: release-please.yml
android/: build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/kurban/flutter_cache_video_player/: FlutterCacheVideoPlayerPlugin.kt
android/src/test/kotlin/com/kurban/flutter_cache_video_player/: FlutterCacheVideoPlayerPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/kurban/flutter_cache_video_player_example/: MainActivity.kt
example/android/app/src/main/res/xml/: network_security_config.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/lib/pages/: player_page.dart
example/lib/widgets/: controls_bar.dart  playlist_section.dart  video_surface.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/web/: index.html  manifest.json
example/windows/: .gitignore  CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  utils.cpp  win32_window.cpp  win32_window.h
ios/: flutter_cache_video_player.podspec
ios/flutter_cache_video_player/: Package.swift
ios/flutter_cache_video_player/Sources/flutter_cache_video_player/: FlutterCacheVideoPlayerPlugin.swift
lib/: flutter_cache_video_player.dart  flutter_cache_video_player_web.dart
lib/src/: cache_video_player.dart
lib/src/core/: constants.dart  logger.dart  platform_detector.dart  video_source.dart
lib/src/data/: cache_index_db.dart  tables.dart
lib/src/data/enums/: play_state.dart  skip_second_type.dart
lib/src/data/models/: chunk_bitmap.dart  media_index.dart  playback_history.dart  video_cover_frame.dart
lib/src/data/repositories/: cache_repository.dart  history_repository.dart
lib/src/download/: chunk_merger.dart  download_manager.dart  download_task.dart  download_worker.dart  download_worker_pool.dart
lib/src/player/: flutter_cache_video_player_controller.dart  flutter_cache_video_player_state.dart  flutter_cache_video_playlist_controller.dart  native_player_controller.dart  platform_player_factory.dart  player_service.dart  player_state.dart  playlist_manager.dart  video_player_controller.dart
lib/src/proxy/: mime_detector.dart  proxy_server.dart  range_handler.dart  stream_splitter.dart
lib/src/ui/: default_video_player.dart  flutter_cache_video_player_view.dart  video_player.dart
lib/src/ui/layouts/: desktop_layout.dart  mobile_layout.dart  tablet_layout.dart
lib/src/ui/responsive/: adaptive_scaffold.dart
lib/src/ui/style/: default_video_player_style.dart  video_player_theme.dart
lib/src/ui/themes/: dark_theme.dart  light_theme.dart  theme_controller.dart
lib/src/ui/widgets/: audio_player_widget.dart  cache_indicator.dart  player_gradient_mask.dart  player_icon_button.dart  player_scrubber_slider.dart  playlist_panel.dart  progress_bar.dart  settings_sheet.dart  video_player_widget.dart
lib/src/utils/: asset_extractor.dart  file_utils.dart  size_formatter.dart  url_hasher.dart
linux/: CMakeLists.txt  flutter_cache_video_player_plugin.cc  flutter_cache_video_player_plugin_private.h  mpv_player.cc
linux/include/flutter_cache_video_player/: flutter_cache_video_player_plugin.h
linux/test/: flutter_cache_video_player_plugin_test.cc
macos/: flutter_cache_video_player.podspec
macos/flutter_cache_video_player/: Package.swift
macos/flutter_cache_video_player/Sources/flutter_cache_video_player/: FlutterCacheVideoPlayerPlugin.swift
native/: mpv_player.cc  mpv_player.h
test/: proxy_cache_server_test.dart  video_player_controller_test.dart
windows/: .gitignore  CMakeLists.txt  flutter_cache_video_player_plugin.cpp  flutter_cache_video_player_plugin.h  flutter_cache_video_player_plugin_c_api.cpp  mpv_player.cc  mpv_player.h
windows/include/flutter_cache_video_player/: flutter_cache_video_player_plugin_c_api.h
windows/test/: flutter_cache_video_player_plugin_test.cpp
